Added distance measuring between anchors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="plane_placement">Plane Placement</string>
     <string name="best_placement">Best Placement</string>
     <string name="point_your_phone_down">Point your phone down at an empty space, and move it around slowly</string>
+    <string name="max_anchors_reached">Max reached</string>
 </resources>
