--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="btnDepth">Depth</string>
     <string name="btnCat">Catalogue</string>
     <string name="btnRemoveAll">Remove all</string>
+    <string name="btnMeasure">Measure distance</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
 </resources>
